--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   amap_base_location: ^0.4.0+1 #高德地图定位
   #image_picker: ^0.6.0+9  #系统相册
 
+  fluro: ^1.5.1  # 路由框架 https://github.com/theyakka/fluro
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
